fixed scaling on mobiles and desktop

--- a/assets/styles/files.css
+++ b/assets/styles/files.css
@@ -36,6 +36,8 @@ body {
   background: white;
   text-align: left;
   line-height: 32px;
+  border-radius: 5px;
+  margin-left: 42px;
 }
 
 .file-icon {
@@ -60,6 +62,7 @@ body {
 
 .file-size {
   float: left;
+  color: #979797;
 }
 
 .download {
